#75 Finish Final Tablet Layout tweaks Created the final tablet layour tweaks for all of the pages in the application

--- a/app/src/main/res/layout-sw600dp/fragment_statistics.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_statistics.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/colorPrimary"
     android:orientation="vertical"
     tools:context=".statistics.StatisticsFragment">
 
     <TextView
         android:id="@+id/statTitle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#4CAF50"
-        android:fontFamily="serif"
+        android:layout_height="150dp"
+        android:background="@color/theme_green"
+        android:fontFamily="@font/poppins"
         android:text="Statistic Title"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="60sp"
+        android:textColor="@color/theme_textblack"
+        android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,11 +27,12 @@
 
     <ImageView
         android:id="@+id/statsImage"
-        android:layout_width="1020dp"
-        android:layout_height="744dp"
-        android:layout_marginTop="68dp"
+        android:layout_width="match_parent"
+        android:layout_height="318dp"
+        android:layout_marginTop="175dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/statTitle"
-        tools:layout_editor_absoluteX="-30dp"
         tools:src="@tools:sample/avatars" />
 
     <TextView
@@ -37,15 +40,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10sp"
-        android:layout_marginTop="32dp"
-        android:fontFamily="serif"
+        android:fontFamily="@font/poppins"
         android:text="Statistic Value"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="@color/black"
+        android:textColor="?attr/colorOnPrimary"
         android:textSize="48sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/statsImage" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
