Externalized final few strings used in the app to strings.xml

--- a/app/src/main/res/layout-sw600dp/product_list_item.xml
+++ b/app/src/main/res/layout-sw600dp/product_list_item.xml
@@ -17,6 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:contentDescription="@string/ebayItemName"
             android:fontFamily="@font/poppins"
             android:maxLength="20"
             android:text="TextView"
@@ -31,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:contentDescription="@string/ebayItemDesc"
             android:fontFamily="@font/poppins"
             android:maxLength="20"
             android:text="TextView"
@@ -61,6 +63,7 @@
             android:layout_height="105dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:contentDescription="@string/ebayImageDesc"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/placeholder_image"
