--- a/app/src/main/res/layout/product_list_item.xml
+++ b/app/src/main/res/layout/product_list_item.xml
@@ -19,7 +19,7 @@
             android:layout_marginTop="16dp"
             android:fontFamily="@font/poppins"
             android:maxLength="20"
-            android:text="TextView"
+            android:text="@string/ebayItemName"
             android:textColor="?attr/colorPrimaryVariant"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +33,7 @@
             android:layout_marginTop="16dp"
             android:fontFamily="@font/poppins"
             android:maxLength="20"
-            android:text="TextView"
+            android:text="@string/ebayItemDesc"
             android:textAlignment="viewStart"
             android:textColor="?attr/colorPrimaryVariant"
             android:textSize="16sp"
@@ -48,7 +48,7 @@
             android:layout_marginTop="16dp"
             android:fontFamily="@font/poppins"
             android:maxLength="20"
-            android:text="TextView"
+            android:text="@string/ebayItemPrice"
             android:textColor="?attr/colorPrimaryVariant"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -61,9 +61,11 @@
             android:layout_height="105dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:contentDescription="@string/ebayImageDesc"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/placeholder_image"
+            tools:ignore="ImageContrastCheck"
             tools:srcCompat="@drawable/placeholder_image" />
 
         <ImageView
@@ -73,6 +75,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/customcircle"
+            android:contentDescription="@string/delete_item_icon"
             android:padding="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
