--- a/app/src/main/res/layout-sw600dp/fragment_product_details.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_product_details.xml
@@ -23,7 +23,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:contentDescription="Image of the Ebay"
+            android:contentDescription="@string/ebayImageDesc"
             android:src="@drawable/placeholder_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -93,7 +93,7 @@
             android:layout_marginEnd="8dp"
             android:backgroundTint="?attr/colorAccent"
             android:fontFamily="@font/poppins"
-            android:text="Add to inventory"
+            android:text="@string/add_to_inventory"
             android:textColor="@color/white"
             app:icon="@drawable/ic_baseline_playlist_add_24"
             app:iconTint="@color/white"
