--- a/app/src/main/res/layout-sw600dp/fragment_statistics.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_statistics.xml
@@ -15,7 +15,7 @@
         android:layout_height="150dp"
         android:background="@color/theme_green"
         android:fontFamily="@font/poppins"
-        android:text="Statistic Title"
+        android:text="@string/statistic_title"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/theme_textblack"
@@ -30,6 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="318dp"
         android:layout_marginTop="175dp"
+        android:contentDescription="@string/app_icon_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/statTitle"
@@ -40,6 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10sp"
+        android:contentDescription="@string/statistic_value"
         android:fontFamily="@font/poppins"
         android:text="Statistic Value"
         android:textAlignment="center"
