--- a/app/src/main/res/layout-sw600dp/fragment_welcome.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_welcome.xml
@@ -36,6 +36,7 @@
                 android:layout_height="426dp"
                 android:layout_margin="10sp"
                 android:background="#FFEB3B"
+                android:contentDescription="@string/app_icon_image"
                 android:src="@drawable/appiconimage" />
 
             <TextView
@@ -71,7 +72,8 @@
                 android:inputType="textPersonName|phone"
                 android:minHeight="48dp"
                 android:textColorHint="@color/black"
-                android:textSize="24sp" />
+                android:textSize="24sp"
+                android:autofillHints="" />
 
             <Button
                 android:id="@+id/textIntentButton"
