--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -22,9 +22,11 @@
             android:ems="10"
             android:inputType="number"
             android:maxLength="12"
+            android:minHeight="48dp"
             android:textColor="@color/theme_textblack"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:autofillHints="" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
