--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -112,7 +112,7 @@
             android:gravity="center"
             android:text="@string/price_unavailable"
             android:textAlignment="center"
-            android:textColor="#039BE5"
+            android:textColor="?attr/colorPrimaryVariant"
             android:textSize="16sp"
             android:textStyle="bold"
             app:icon="@drawable/ic_baseline_launch_24"
