--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_recycler">
+    app:startDestination="@+id/nav_welcome">
     <fragment
         android:id="@+id/nav_recycler"
         android:name="com.example.arbitragetracker.productRecycler.ProductRecycler"
@@ -27,7 +27,7 @@
     <fragment
         android:id="@+id/nav_settings"
         android:name="com.example.arbitragetracker.settings.SettingsFragment"
-        android:label="SettingsFragment" />
+        android:label="Settings Options" />
     <fragment
         android:id="@+id/nav_credits"
         android:name="com.example.arbitragetracker.credits.CreditsFragment"
