Externalized the dimen values to dimens.xml

--- a/app/src/main/res/layout-sw600dp/fragment_statistics.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_statistics.xml
@@ -19,7 +19,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/theme_textblack"
-        android:textSize="48sp"
+        android:textSize="@dimen/app_title_size"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="?attr/colorOnPrimary"
-        android:textSize="48sp"
+        android:textSize="@dimen/app_title_size"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
