--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -42,7 +42,7 @@
             android:text="@string/ebayItemName"
             android:textAlignment="center"
             android:textColor="?attr/colorOnPrimary"
-            android:textSize="24sp"
+            android:textSize="@dimen/ebay_item_name_size"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
             android:paddingHorizontal="30dp"
             android:text="@string/ebayItemDesc"
             android:textColor="?attr/colorOnPrimary"
-            android:textSize="16sp"
+            android:textSize="@dimen/ebay_item_desc_size"
             app:colorClickableText="#737373"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +79,7 @@
             android:fontFamily="@font/poppins"
             android:text="@string/ebayItemPrice"
             android:textColor="?attr/colorOnPrimary"
-            android:textSize="24sp"
+            android:textSize="@dimen/ebay_item_price_size"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
