--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -19,7 +19,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/theme_textblack"
-        android:textSize="30sp"
+        android:textSize="@dimen/app_title_size"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +46,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="?attr/colorOnPrimary"
-        android:textSize="28sp"
+        android:textSize="@dimen/credit_header_size"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
