--- a/app/src/main/res/layout-sw600dp/fragment_welcome.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_welcome.xml
@@ -27,7 +27,7 @@
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@color/theme_textblack"
-                android:textSize="48sp"
+                android:textSize="@dimen/app_title_size"
                 android:textStyle="bold" />
 
             <ImageView
@@ -46,7 +46,7 @@
                 android:fontFamily="@font/poppins"
                 android:text="@string/welcomeContent"
                 android:textColor="?attr/colorOnPrimary"
-                android:textSize="24sp" />
+                android:textSize="@dimen/content_size" />
 
             <Button
                 android:id="@+id/webLinkOne"
@@ -58,7 +58,7 @@
                 android:text="@string/webLinkIntent"
                 android:textColor="@android:color/black"
                 android:textColorLink="@color/theme_textblack"
-                android:textSize="24sp"
+                android:textSize="@dimen/content_size"
                 android:textStyle="bold" />
 
             <EditText
@@ -84,7 +84,7 @@
                 android:text="@string/textIntent"
                 android:textColor="@android:color/black"
                 android:textColorLink="@color/theme_textblack"
-                android:textSize="24sp"
+                android:textSize="@dimen/content_size"
                 android:textStyle="bold" />
 
         </LinearLayout>
